* [L#211313] Fixed bad virtual name being loaded (thanks kulmegil)
* [L#202801] Allow virtual folders to have the same name
* Allow more characters in virtual names
* Fixed downloading multiple file lists with the enter key (poy)
* Improved transfer speed averaging 
* [L#212411] Fixed downloading multiple file lists (poy)

-- 0.705 2008-03-14 --
* Several patches for better *nix compatibility of the core (thanks steven sheehy et al)
* Improve segmented download implementation
* Fix search request ip when using multiple ip's (thanks stanislav maslovski)
* Fixed a crash when right-clicking in own file list
* [ADC] Searches filtered by token if available so that each search window only gets its own results
* [ADC] Implemented test version of bloom filters which will dramatically reduce hub bandwidth usage for TTH searches
* Fixed a crash with partial list browsing
* Replaced homegrown i18n solution with gettext (thanks david grundberg, mikejj)
* Fixed an issue with nick encodings and nmdc connections (thanks stanislav maslovski)
* Added download view which shows per-file download information
* Chat timestamps on by default
* Added tab drag/drop (thanks poy)
* Changed Pothead to mikejj 
* Fixed search spy crash
* Upgraded to bzip 1.0.4 (thanks mikejj)
* Tab tooltips (thanks poy)
* [L#185724] Allow spaces in the description field (poy)
* [L#180321] [ADC] Handle third person formatting (thanks poy)
* [L#186429] Fix right-click issue when chat history is long (thanks poy)
* [L#188107] In waiting users, show requested chunk (since we can't know % done)
* [L#188585] Fixed crash when download connection was disconnected before any data was received
* Fixed crash due to race condition on idle check (thans bigmuscle)
* Fixed crash when copying identity
* Fixed potential timer race condition (thanks bigmuscle)
* The good parts of partially downloaded segments are now added to queue (thanks bigmuscle)
* Fancy menus (thanks poy)